@@ -1,0 +1,27 @@
+2009-08-16 07:32:41 : Program started : Mnemosyne 1.2.1 posix linux2
+2009-08-16 07:32:42 : Loaded database 139 2 8571
+2009-08-16 07:32:42 : Uploaded 90fb8ef4_00253.bz2
+2009-08-16 07:32:53 : R a344fd3c 4 1.86 | 15 30 6 1 1 | 1 1 | 6 -1 | 4.0
+2009-08-16 07:32:56 : R 059e5681 4 1.30 | 5 11 1 1 1 | 1 1 | 6 1 | 2.2
+2009-08-16 07:32:58 : R f1dba46d 5 2.25 | 4 9 2 1 1 | 1 1 | 6 1 | 1.0
+2009-08-16 07:33:01 : R 9d3495b5 4 1.30 | 4 27 2 1 1 | 1 1 | 6 0 | 1.9
+2009-08-16 07:33:12 : R 5dc9b155.inv 0 1.30 | 41 39 11 0 0 | 1 1 | 0 0 | 2.7
+2009-08-16 07:33:15 : R c718f60a 4 1.30 | 18 44 12 1 1 | 1 1 | 6 0 | 2.1
+2009-08-16 07:33:27 : R e8ba0334 2 1.87 | 9 8 1 1 1 | 2 2 | 6 0 | 1.7
+2009-08-16 07:33:29 : R 47e161da 4 1.73 | 15 27 7 1 1 | 2 2 | 6 0 | 2.0
+2009-08-16 07:33:31 : R 6a62d3aa 4 1.88 | 2 17 2 1 1 | 2 2 | 6 1 | 0.2
+2009-08-16 07:33:34 : R 441864b4.inv 4 1.30 | 41 68 16 1 1 | 2 2 | 6 -1 | 1.2
+2009-08-16 07:33:35 : Saved database 129 3 8571
+2009-08-16 07:33:35 : Program stopped
+2009-08-17 09:33:02 : Program started : Mnemosyne 1.2.1 posix linux2
+2009-08-17 09:33:03 : Loaded database 129 3 8571
+2009-08-17 09:35:02 : R 274119f5 4 1.60 | 21 42 12 1 1 | 2 2 | 6 -1 | 119.0
+2009-08-17 09:35:04 : R 49255690 4 1.30 | 22 46 10 1 1 | 2 2 | 6 0 | 1.7
+2009-08-17 09:35:21 : R f5eca1a7.inv 4 1.30 | 16 58 11 1 1 | 2 2 | 6 -1 | 15.5
+2009-08-17 09:35:24 : R f326f67f 4 1.30 | 16 54 9 1 1 | 2 2 | 6 1 | 2.0
+2009-08-17 09:35:29 : R 4a5f9cf6 0 1.43 | 11 22 7 0 0 | 5 5 | 0 0 | 3.4
+2009-08-17 09:35:43 : R 83380452 0 1.30 | 24 41 14 0 0 | 5 5 | 0 0 | 12.4
+2009-08-17 09:35:52 : R 2229f18d 4 1.30 | 14 32 5 1 6 | 5 5 | 6 1 | 1.9
+2009-08-17 09:35:55 : R 3c3fe0ff 4 1.30 | 8 23 3 1 2 | 0 0 | 7 1 | 2.2
+2009-08-17 09:36:50 : R f657cca9 4 1.30 | 28 55 15 1 2 | 0 0 | 7 0 | 52.4
+
